--- a/flutter_local_notifications/example/android/app/src/main/AndroidManifest.xml
+++ b/flutter_local_notifications/example/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
    <application
         android:label="flutter_local_notifications_example"
         android:icon="@mipmap/ic_launcher">
+         <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="YOUR API KEY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
