--- a/flutter_local_notifications/example/pubspec.yaml
+++ b/flutter_local_notifications/example/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^0.13.4
   image: ^3.0.8
   path_provider: ^2.0.0
+  google_maps_flutter: ^2.3.1
 
 dev_dependencies:
   flutter_driver:
